# ractix-web

./: Cargo.toml
src/: main.rs
templates/: index.html
